--- a/src/app/calender/calender.component.html
+++ b/src/app/calender/calender.component.html
@@ -1,8 +1,9 @@
 <la-square>
+  <h2 class="title">Kalendar</h2>
   <div class="square">
     <div class="content">
       <div class="calendar-container">
-        
+
         <div class="calendar-grid-wrapper">
           <div class="calendar-grid">
             <div class="month-nav">
