--- a/src/app/calender/calender.component.scss
+++ b/src/app/calender/calender.component.scss
@@ -6,37 +6,38 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 130%;
   width: 100%;
+  height: 130%;
+  border: none;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   flex-grow: 0;
-  padding: 20px;
-  box-sizing: border-box;
-  height: auto;
   max-width: 1200px;
   width: 100%;
+  height: auto;
+  box-sizing: border-box;
+  margin: 0;
 
   .calendar-container {
     display: flex;
-    align-items: stretch; 
+    align-items: stretch;
     gap: 20px;
     flex-grow: 1;
     min-height: 650px;
   }
 
   .calendar-grid-wrapper {
-    flex: 3;
-    background: #ffffff;
-    border-radius: 20px;
-    padding: 20px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
     display: flex;
     flex-direction: column;
-    height: 100%; 
+    height: 100%;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+    background: #ffffff;
+    flex: 3;
   }
 
   .calendar-grid {
@@ -50,16 +51,16 @@
       margin-bottom: 15px;
 
       span {
-        font-weight: 600;
         font-size: 20px;
+        font-weight: 600;
       }
 
       .nav-btn {
-        background: none;
-        border: none;
-        cursor: pointer;
         padding: 6px;
+        border: none;
         border-radius: 6px;
+        background: none;
+        cursor: pointer;
 
         &:hover {
           background: rgba(44, 128, 252, 0.1);
@@ -80,20 +81,20 @@
     }
 
     .weekdays span {
-      font-weight: bold;
       margin-bottom: 10px;
       font-size: 16px;
-      color: #555;
+      font-weight: bold;
+      color: #555555;
     }
 
     .days .day {
-      min-height: 100px;
+      position: relative;
       max-height: 100px;
+      min-height: 100px;
+      overflow: hidden;
       padding: 10px;
       border-radius: 10px;
       cursor: pointer;
-      position: relative;
-      overflow: hidden;
       transition: background 0.2s;
 
       &:hover {
@@ -101,63 +102,63 @@
       }
 
       &.selected {
-        background-color: #f0f5ff;
         color: rgb(0, 0, 0);
+        background-color: #f0f5ff;
       }
 
       .day-number {
-        font-weight: bold;
-        font-size: 24px;
         margin-bottom: 6px;
+        font-size: 24px;
+        font-weight: bold;
       }
 
       .mini-event {
-        margin:3px 2px;
-        font-size: 14px;
-        background-color: #5197ff;
-        color: white;
-        gap: 1px;
-        border-radius: 6px;
-        padding: 2px 7px;
-        white-space: nowrap;
         overflow: hidden;
+        padding: 2px 7px;
+        margin: 3px 2px;
+        border-radius: 6px;
+        font-size: 14px;
+        color: white;
         text-overflow: ellipsis;
+        white-space: nowrap;
+        background-color: #5197ff;
+        gap: 1px;
       }
     }
   }
 
   .event-panel {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    background: #f9faff;
-    border-radius: 20px;
+    height: 100%;
     padding: 20px;
+    border-radius: 20px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
-    height: 100%; 
+    background: #f9faff;
+    flex: 1;
+    gap: 15px;
 
     .add-event {
       display: flex;
       gap: 10px;
 
       input {
-        flex: 1;
         padding: 12px 15px;
+        border: 1px solid #cccccc;
         border-radius: 20px;
-        border: 1px solid #ccc;
         font-size: 15px;
         background-color: transparent;
+        flex: 1;
       }
 
       .add-button {
         padding: 10px 25px;
-        border-radius: 20px;
         border: none;
-        background-color: #2c80fc;
-        color: white;
-        cursor: pointer;
+        border-radius: 20px;
         font-weight: 500;
+        color: white;
+        background-color: #2c80fc;
+        cursor: pointer;
 
         &:disabled {
           background-color: #9bc6fb;
@@ -171,22 +172,21 @@
     }
 
     .event-list {
-      list-style: none;
-      padding: 0;
-      overflow-y: auto;
       max-height: 75vh;
+      overflow-y: auto;
+      padding: 0;
+      list-style: none;
 
-      .title-event{
-         color: var(--white) ;
+      .title-event {
+        color: var(--white);
       }
 
       li {
-       
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 8px;
         padding: 10px 8px;
+        margin-bottom: 8px;
         border-radius: 8px;
         background: #e6f0ff;
         transition: background 0.2s;
@@ -196,10 +196,10 @@
         }
 
         .event-controls button {
-          background: none;
-          border: none;
-          cursor: pointer;
           padding: 2px;
+          border: none;
+          background: none;
+          cursor: pointer;
 
           img {
             width: 16px;
@@ -217,78 +217,71 @@
   align-items: center;
 
   .color-button {
-   
+    position: relative;
     display: flex;
     align-items: center;
-    gap: 5px;
-    background-color: #D7E5FF !important;
-    padding: 10px 10px;
+    padding: 10px;
+    border: 1px solid #cccccc;
     border-radius: 100px !important;
-    border: 1px solid #ccc;
+    background-color: #d7e5ff !important;
+    background-color: #ffffff;
     cursor: pointer;
-   
-    background-color: #fff;
-    position: relative;
+    gap: 5px;
 
-     i {
-          color: #2c80fc !important;
-          font-size: 16px;
-          
-        }
+    i {
+      font-size: 16px;
+      color: #2c80fc !important;
+    }
 
-        &:hover {
-          background-color: #b6d3fe;
-        }
+    &:hover {
+      background-color: #b6d3fe;
+    }
 
     .selected-color {
       width: 16px;
       height: 16px;
-      border-radius: 4px; 
-   
-      border: 1px solid #999;
+      border: 1px solid #999999;
+      border-radius: 4px;
     }
   }
 
   .color-palette {
     position: absolute;
     top: 48px;
-    
     left: -110px;
-    display: flex;
-    gap: 5px;
-    padding: 5px;
-    background-color: #D7E5FF;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     z-index: 10;
+    display: flex;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    background-color: #d7e5ff;
+    gap: 5px;
 
     .color-circle {
       width: 24px;
       height: 24px;
+      border: 1px solid #cccccc;
       border-radius: 50%;
       cursor: pointer;
-      border: 1px solid #ccc;
     }
   }
 }
 
 .mini-event.extra-events {
-  background-color: #ccc;
-  color: #333;
-  text-align: center;
-  font-weight: bold;
-  border-radius: 6px;
   padding: 2px 7px;
+  border-radius: 6px;
   font-size: 14px;
+  font-weight: bold;
+  color: #333333;
+  background-color: #cccccc;
+  text-align: center;
 }
 
 .event-list li {
-  border-radius: 10px;
   padding: 10px 12px;
+  border-radius: 10px;
   font-weight: 500;
   transition: transform 0.2s ease, background-color 0.3s ease;
-
-
 
   .title-event {
     font-size: 15px;
@@ -297,4 +290,11 @@
   .delete-btn img {
     filter: brightness(0) invert(1);
   }
+}
+
+.title {
+  margin-top: 70px;
+  margin-bottom: 0;
+  margin-left: 60px;
+  font-size: 30px;
 }
