--- a/src/app/exam-details/exam-details.component.scss
+++ b/src/app/exam-details/exam-details.component.scss
@@ -1,7 +1,7 @@
 .exam-header {
-  margin-top: 20px;
   display: flex;
   align-items: center;
+  margin-top: 20px;
   gap: 15px;
 
   h2 {
@@ -10,10 +10,10 @@
   }
 
   .back-btn {
-    background: transparent;
-    border: none;
-    cursor: pointer;
     padding: 0;
+    border: none;
+    background: transparent;
+    cursor: pointer;
 
     img {
       width: 36px;
@@ -41,10 +41,10 @@
     padding: 10px 20px;
     border: 2px solid #cfd8ef;
     border-radius: 8px;
-    background-color: #fff;
-    color: #0a2b63;
-    cursor: pointer;
     font-size: 16px;
+    color: #0a2b63;
+    background-color: #ffffff;
+    cursor: pointer;
     transition: all 0.2s ease-in-out;
 
     &:hover {
@@ -52,29 +52,31 @@
     }
 
     &.active {
-      background-color: #0a2b63;
       color: white;
+      background-color: #0a2b63;
       border-color: #0a2b63;
     }
   }
 }
 
 .wrapper {
+  flex-direction: row;
   margin-top: 40px;
 
   .instructions {
-    text-align: left;
+    max-width: 1190px;
+    padding: 20px;
+    margin-bottom: 20px;
     border: 1.5px solid #007bff;
     border-radius: 25px;
-    padding: 20px;
-    max-width: 1100px;
-    background-color: #f0f8ff;
     font-size: 16px;
-    color: #000;
-    margin-bottom: 20px;
+    color: #000000;
+    background-color: #f0f8ff;
+    text-align: left;
   }
 
   .question {
+    width: 900px;
     font-weight: bold;
     text-align: start;
 
@@ -83,43 +85,43 @@
 
       .answer {
         display: inline-block;
-        margin-right: 10px;
         padding: 3px 8px;
+        margin-right: 10px;
         border-radius: 8px;
         cursor: pointer;
         transition: 0.3s;
 
         &.correct {
-          background-color: #c8f7c5;
           font-weight: bold;
           color: #2b7a0b;
+          background-color: #c8f7c5;
         }
 
         &.wrong {
-          background-color: #fddede;
           color: #a30000;
+          background-color: #fddede;
         }
       }
     }
 
     .show-answer-text {
-      color: #2c80fc;
-      font-weight: bold;
-      cursor: pointer;
       margin-top: 5px;
       font-size: 15px;
+      font-weight: bold;
+      color: #2c80fc;
+      cursor: pointer;
       transition: 0.2s;
 
       &:hover {
-        text-decoration: underline;
         color: #5197ff;
+        text-decoration: underline;
       }
     }
 
     .answer-feedback {
       margin-top: 5px;
-      font-weight: bold;
       font-size: 15px;
+      font-weight: bold;
 
       .correct-answer {
         color: #2b7a0b;
@@ -132,11 +134,11 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  transform: translate(-50%, -50%);
   text-align: center;
 
   img {
@@ -150,16 +152,14 @@
     font-size: 20px;
   }
 }
-.wrapper {
-  flex-direction: row;
-}
+
 .timer-section {
-  margin-right: 100px;
   position: absolute;
   top: 0;
   right: 0;
   display: flex;
   align-items: center;
+  margin-right: 100px;
   gap: 10px;
 
   .timer-wrapper {
@@ -172,56 +172,58 @@
     width: 60px;
     height: 40px;           // ista visina kao dugmad
     padding: 0;             // uklanjanje dodatnog paddinga
-    line-height: 40px;      // vertikalno centriranje teksta
-    text-align: center;
-    border-radius: 10px;
+    margin-right: 15px;
     border: 1px solid #cfd8ef;
+    border-radius: 10px;
     font-size: 14px;
     font-weight: bold;      // bolji vizuelni izgled
-    margin-right: 15px;
+    line-height: 40px;      // vertikalno centriranje teksta
+    text-align: center;
   }
 
   button {
     height: 40px;           // ista visina kao input
     padding: 0 12px;        // horizontalni padding
-    border-radius: 30px;
     border: none;
-    background-color: #2c80fc;
-    color: white;
-    cursor: pointer;
+    border-radius: 30px;
     font-size: 14px;
+    color: white;
+    background-color: #2c80fc;
+    cursor: pointer;
     transition: 0.2s;
 
     &:hover {
       background-color: #5197ff;
     }
   }
-}.time-up-overlay {
+}
+
+.time-up-overlay {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); // tamna pozadina preko cele stranice
+  z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10000;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); // tamna pozadina preko cele stranice
 
   .popup {
-    width: 300px;
-    height: 300px;
-    background-color: white; // popup kutija
-    border-radius: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #0a2b63;
+    width: 300px;
+    height: 300px;
+    padding: 20px;
+    border-radius: 30px;
     font-size: 20px;
     font-weight: bold;
+    color: #0a2b63;
+    background-color: white; // popup kutija
     text-align: center;
-    padding: 20px;
 
     p {
       margin: 0;
@@ -229,19 +231,20 @@
     }
 
     img {
-      margin: 0;
       width: 100px;
+      margin: 0;
       margin-bottom: 20px;
     }
 
     button {
       padding: 12px 28px;
-      font-size: 18px;
       border: none;
       border-radius: 8px;
-      background-color: #2c80fc;
+      font-size: 18px;
       color: white;
+      background-color: #2c80fc;
       cursor: pointer;
+
       &:hover {
         background-color: #5197ff;
       }
