--- a/src/app/exam-list/exam-list.component.scss
+++ b/src/app/exam-list/exam-list.component.scss
@@ -6,31 +6,31 @@
 
   .subject-row {
     h3 {
+      margin-bottom: 20px;
       font-size: 22px;
+      font-weight: 400;
       color: var(--alt);
       text-align: left;
-      font-weight: 400;
-      margin-bottom: 20px;
     }
 
     .cards {
-          
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: 20px;
-      list-style: none;
+      width: 105%;
       padding: 0;
+      list-style: none;
+      gap: 20px;
 
       .card {
-        background-color: var(--white);
-        border-radius: 20px;
-        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
         display: flex;
         flex-direction: column;
-        align-items: center;
         justify-content: flex-start;
-        cursor: pointer;
+        align-items: center;
         margin-bottom: 30px;
+        border-radius: 20px;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
+        background-color: var(--white);
+        cursor: pointer;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
         &:hover {
@@ -38,19 +38,19 @@
         }
 
         img {
-          border-top-left-radius: 20px;
-          border-top-right-radius: 20px;
           width: 100%;
           height: 100px;
-          object-fit: contain;
+          object-fit: cover;
+          border-top-left-radius: 20px;
+          border-top-right-radius: 20px;
         }
 
         span {
+          margin-top: 20px;
+          margin-bottom: 20px;
           font-size: 20px;
           font-weight: bold;
           color: var(--alt);
-          margin-top: 20px;
-          margin-bottom: 20px;
           text-align: center;
         }
       }
