--- a/src/app/faculties-list/faculties-list.component.html
+++ b/src/app/faculties-list/faculties-list.component.html
@@ -1,10 +1,15 @@
 <la-message></la-message>
 
 <div class="faculty-container" *ngFor="let group of [
-  { title: technicalTitle, faculties: filteredTechnical },
+ { title: technicalTitle, faculties: filteredTechnical },
   { title: medicalTitle, faculties: filteredMedical },
-  { title: pharmacyTitle, faculties: filteredPharmacy }]">
-  
+  { title: pharmacyTitle, faculties: filteredPharmacy },
+  { title: artTitle, faculties: filteredArt },
+  { title: socialTitle, faculties: filteredSocial },
+  { title: economicTitle, faculties: filteredEconomic },
+  { title: sportsTitle, faculties: filteredSports }
+]">
+
   <h2 class="faculty-title">{{ group.title }}</h2>
   <ul class="faculty-list">
     <li *ngFor="let faculty of group.faculties" class="faculty-item">
