--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,21 +8,21 @@
       <div class="input-container">
         <input
           type="email"
-          [(ngModel)]="email"
+          [(ngModel)]="model.email"
           placeholder="Unesite Vašu Email Adresu"
           class="input-field" />
       </div>
       <div class="input-container">
         <input
           type="password"
-          [(ngModel)]="password"
+          [(ngModel)]="model.password"
           placeholder="Unesite Lozinku"
           class="input-field" />
       </div>
       <div class="buttons">
         <button class="primary" (click)="login()">Prijavi se</button>
       </div>
-      <p class="signup-text">Nemate nalog? 
+      <p class="signup-text">Nemate nalog?
         <span class="signup-link" (click)="goToSignUp()">Registrujte se</span>
       </p>
       <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
@@ -33,5 +33,5 @@
   <div class="right-side">
     <img src="assets/images/login-image.jpg" alt="Slika" class="side-image" />
   </div>
-  
+
 </div>
