--- a/src/app/past-exams/past-exams.component.scss
+++ b/src/app/past-exams/past-exams.component.scss
@@ -9,25 +9,25 @@
 
 .square {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: flex-start;
   width: 170vh;
   height: 90vh;
-  border-radius: 30px;
-  background-color: #F7F9FA;
-  gap: 10px;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-  overflow: hidden; 
-  padding: 20px;
   box-sizing: border-box;
+  overflow: hidden;
+  padding: 20px;
+  border-radius: 30px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+  background-color: #f7f9fa;
+  gap: 10px;
 }
 
 .exam-years {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 90%;
   margin-top: 40px;
-  width: 100%;
 
   h3 {
     margin-bottom: 15px;
@@ -45,23 +45,23 @@
       margin: 0;
 
       .year-btn {
-        padding: 18px 45px; 
-        font-size: 20px;
-        color: #ffffff; 
+        padding: 18px 45px;
         border: none;
-        background-color: #007bff;
         border-radius: 20px;
+        font-size: 20px;
+        color: #ffffff;
+        background-color: #007bff;
         cursor: pointer;
         transition: all 0.2s ease;
 
         &:hover {
-          background-color: #2c90fa;
           color: #ffffff;
+          background-color: #2c90fa;
         }
 
         &.active {
-          background-color: #007bff;
           color: #ffffff;
+          background-color: #007bff;
         }
       }
     }
@@ -72,31 +72,31 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  overflow-y: auto;
   max-height: 60vh;
+  overflow-y: auto;
   padding-right: 10px;
-
-  &::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; 
-  }
   scrollbar-width: none;
   -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    background: transparent;
+  }
 }
 
 .wrapper-no-selected-item {
-  position: absolute; 
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  justify-content: center; 
+  justify-content: center;
+  align-items: center;
+  transform: translate(-50%, -50%);
   text-align: center;
 
   img {
-    width: 420px; 
+    width: 420px;
     height: auto;
     object-fit: contain;
     margin-bottom: 15px;
