--- a/src/app/pomodoro/pomodoro.component.scss
+++ b/src/app/pomodoro/pomodoro.component.scss
@@ -1,8 +1,9 @@
-.la-square{
-    background-color:#dc3545;
+.la-square {
+  background-color: #dc3545;
 }
 
 .pomodoro-card {
+  position: relative;
   width: 920px;
   padding: 30px;
   margin-top: 10px;
@@ -10,37 +11,37 @@
   border-radius: 20px;
   text-align: center;
 
-
   .mode-selection {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    margin-top: 30px;
     margin-bottom: 40px;
+    margin-left: 100px;
+    gap: 20px;
 
     .mode-card {
       padding: 20px 50px;
       border-radius: 15px;
+      font-size: 22px;
+      font-weight: bold;
+      color: #0a2b63;
       background-color: #e3edff;
       cursor: pointer;
-      font-weight: bold;
-      font-size: 22px;
-      transition: 0.2s;
       user-select: none;
-      color: #0a2b63;
+      transition: transform 0.2s, background-color 0.2s, color 0.2s;
 
       &.active {
         font-size: 24px;
-        background-color: #1E81FF;
-        color: var(--white);
-        // box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+        color: #ffffff;
+        background-color: #1e81ff;
       }
 
       &.work.active {
-        background-color: #dc3545; // crvena za rad
+        background-color: #dc3545;
       }
 
       &.break.active {
-        background-color: #28a745; // zelena za pauzu
+        background-color: #28a745;
       }
 
       &:hover {
@@ -50,54 +51,59 @@
   }
 
   .timer-section {
+    width: 950px;
     height: 540px;
-    color: white;
     padding: 40px;
     border-radius: 20px;
-    box-shadow: inset 0 0 25px rgba(0,0,0,0.15);
-    background-color: #dc3545; // default crvena
+    box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.15);
+    color: #ffffff;
+    background-color: #dc3545;
 
     &.break {
       background-color: #28a745;
 
-      .controls button:first-child {
-        background-color: white;
-        color: #28a745;
-      }
+      .controls {
+        button:first-child {
+          color: #28a745;
+          background-color: #ffffff;
 
-      .controls button:first-child:hover {
-        background-color: #e6ffe6;
-      }
+          &:hover {
+            background-color: #e6ffe6;
+          }
+        }
 
-      .controls button:last-child {
-        background-color: #3ec35b;
-        color: white;
-      }
+        button:last-child {
+          color: #ffffff;
+          background-color: #3ec35b;
 
-      .controls button:last-child:hover {
-        background-color: #28a745;
+          &:hover {
+            background-color: #28a745;
+          }
+        }
       }
     }
 
     &.work {
       background-color: #dc3545;
 
-      .controls button:first-child {
-        background-color: white;
-        color: #dc3545;
-      }
+      .controls {
+        button:first-child {
+          color: #66141d;
+          background-color: #ffffff;
 
-      .controls button:first-child:hover {
-        background-color: #f8d7da;
-      }
+          &:hover {
+            background-color: #f8d7da;
+          }
+        }
 
-      .controls button:last-child {
-        background-color: #b02a37;
-        color: white;
-      }
+        button:last-child {
+          color: #ffffff;
+          background-color: #b02a37;
 
-      .controls button:last-child:hover {
-        background-color: #dc3545;
+          &:hover {
+            background-color: #7c2029;
+          }
+        }
       }
     }
 
@@ -105,30 +111,30 @@
       margin-bottom: 30px;
       font-size: 36px;
       font-weight: bold;
-      color: white;
+      color: #ffffff;
     }
 
     .progress-circle {
       position: relative;
-      box-sizing: border-box;
       width: 220px;
       height: 220px;
+      box-sizing: border-box;
       margin: 0 auto 40px;
 
       svg {
-        transform: rotate(-90deg);
         width: 220px;
         height: 220px;
+        transform: rotate(-90deg);
 
         .circle-bg {
           fill: none;
-          stroke: #eee;
+          stroke: #eeeeee;
           stroke-width: 3.5;
         }
 
         .circle {
           fill: none;
-          stroke: #fff;
+          stroke: #ffffff;
           stroke-width: 3.5;
           stroke-linecap: round;
           transition: stroke-dasharray 0.3s linear;
@@ -139,9 +145,9 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
         font-size: 44px;
         font-weight: bold;
+        transform: translate(-50%, -50%);
       }
     }
 
@@ -154,52 +160,48 @@
         padding: 15px 40px;
         border: none;
         border-radius: 15px;
-        font-weight: bold;
         font-size: 18px;
+        font-weight: bold;
         cursor: pointer;
         transition: 0.2s;
 
         &:first-child {
-          background-color: white;
           color: #dc3545;
-        }
+          background-color: #ffffff;
 
-        &:first-child:hover {
-          background-color: #f8d7da;
+          &:hover {
+            background-color: #f8d7da;
+          }
         }
 
         &:last-child {
+          color: #ffffff;
           background-color: #b02a37;
-          color: white;
-        }
 
-        &:last-child:hover {
-          background-color: #dc3545;
+          &:hover {
+            background-color: #dc3545;
+          }
         }
       }
     }
   }
-}
-
-.pomodoro-card {
-  position: relative; 
 
   .info-tooltip {
     position: absolute;
-    bottom: 60px;
-    left: 1040px;
+    bottom: 0;
+    left: 1130px;
     width: 50px;
     height: 50px;
-    background-color: #2c80fc;
-    color: white;
-    border-radius: 50%;
-    font-weight: bold;
-    font-size: 25px;
-    text-align: center;
     padding: 10px;
+    border-radius: 50%;
+    font-size: 25px;
+    font-weight: bold;
     line-height: 30px;
+    color: #ffffff;
+    background-color: #2c80fc;
     cursor: pointer;
     transition: 0.2s;
+    text-align: center;
 
     &:hover {
       background-color: #5197ff;
@@ -207,19 +209,19 @@
 
     .info-content {
       position: absolute;
-      bottom: 5px;
       right: 70px;
-      text-align: justify;
+      bottom: 5px;
       width: 250px;
-      background-color: #5197ff;
-      line-height: 1.4; 
       padding: 10px;
       border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
       font-size: 14px;
+      line-height: 1.4;
+      background-color: #5197ff;
+      text-align: justify;
 
-      p{
-              color: #ffffff;
+      p {
+        color: #ffffff;
       }
     }
   }
