--- a/src/app/shared/exam-timer/exam-timer.component.scss
+++ b/src/app/shared/exam-timer/exam-timer.component.scss
@@ -1,12 +1,12 @@
 .timer-container {
-  position: fixed; 
-  top: 100px;       
-  right: 140px;      
-  display: flex;
-  align-items: center;
-  font-family: 'Fira Code', 'JetBrains Mono', monospace;
+  position: fixed;
+  top: 50px;
+  right: 90px;
   z-index: 1000;
+  display: flex;
   justify-content: flex-end;
+  align-items: center;
+  font-family: "Fira Code", "JetBrains Mono", monospace;
 
   .timer-wrapper {
     display: flex;
@@ -14,59 +14,60 @@
   }
 
   .timer-inner {
-    
     display: flex;
-    align-items: center;  
-    gap: 8px;
-    padding: 6px 12px;
+    align-items: center;
     min-width: 240px;
+    padding: 6px 12px;
     border-radius: 12px;
-    // background-color: #f5f7fa; 
+    gap: 8px;
+
+    // background-color: #f5f7fa;
   }
 
   input {
     width: 90px;
     height: 40px;
-    font-family: 'Fira Code', 'JetBrains Mono', monospace;
-    padding: 0;           
-    line-height: 40px;   
-    text-align: center;
+    padding: 0;
+    border: 2px solid #cfd8ef;
     border-radius: 8px;
+    font-family: "Fira Code", "JetBrains Mono", monospace;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 40px;
     color: #1565c0;
     background-color: #e3f2fd;
-    border: 2px solid #cfd8ef;
-    font-weight: bold;
-    font-size: 20px;
+    text-align: center;
 
-    ::placeholder{
-        color: #1565c0;
+    ::placeholder {
+      color: #1565c0;
     }
   }
 
   button {
-    height: 40px;         
-    padding: 0 18px;       
-    border-radius: 12px;
+    height: 40px;
+    padding: 0 18px;
     border: none;
-    background-color: #2c80fc;
-    color: white;
-    cursor: pointer;
+    border-radius: 12px;
     font-size: 14px;
+    color: white;
+    background-color: #2c80fc;
+    cursor: pointer;
+
     &:hover {
       background-color: #5197ff;
     }
   }
 
   .display h2 {
-    margin: 0;
-    font-size: 20px;
-    height: 40px;
-      color: #1565c0;
-    line-height: 40px; 
-    padding: 0 10px;
-    border-radius: 6px;
-    background-color: #e3f2fd;
     min-width: 70px;
+    height: 40px;
+    padding: 0 10px;
+    margin: 0;
+    border-radius: 6px;
+    font-size: 20px;
+    line-height: 40px;
+    color: #1565c0;
+    background-color: #e3f2fd;
     text-align: center;
   }
 
@@ -75,11 +76,12 @@
     gap: 5px;
 
     button {
-      height: 40px;     
-      padding: 0 22px;     
+      height: 40px;
+      padding: 0 22px;
       border-radius: 12px;
-      background-color: #1976d2;
       color: white;
+      background-color: #1976d2;
+
       &:hover {
         background-color: #1565c0;
       }
