--- a/src/app/shared/input/input.component.scss
+++ b/src/app/shared/input/input.component.scss
@@ -1,11 +1,11 @@
 .input-container {
   position: relative;
   width: 110%;
-  border-radius: 30px;
-  background-color: #F1F1F1;
-  height: 45px; 
+  height: 45px;
   padding: 0 12px;
   margin-bottom: 20px;
+  border-radius: 30px;
+  background-color: #f1f1f1;
 }
 
 .input-field {
@@ -21,15 +21,14 @@
 
 .input-icon {
   position: absolute;
-  right: 20px;
   top: 50%;
-  transform: translateY(-50%);
+  right: 20px;
+  display: block;
   width: 18px;
   height: 18px;
   cursor: pointer;
-  display: block;
+  transform: translateY(-50%);
 }
-
 
 :host-context(body.dark-mode) .input-container {
   background-color: #162239;
