--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -1,13 +1,14 @@
 .square-menu {
-  width: 300px;
-  height: 90vh;
-  padding: 20px 0;
-  border-radius: 30px 0 0 30px; 
-  background-color: var(--white);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 20px; 
+  width: 300px;
+  height: 100vh;
+  padding: 20px 0;
+
+  // border-radius: 30px 0 0 30px;
+  background-color: var(--white);
+  gap: 20px;
 }
 
 .logo-title {
@@ -24,9 +25,9 @@
 }
 
 .logo-title h2 {
+  margin: 0;
   font-size: 20px;
   font-weight: 600;
-  margin: 0;
   color: var(--black);
 }
 
@@ -41,22 +42,21 @@
   display: flex;
   align-items: center;
   padding: 12px 30px;
-  gap: 12px;
-  text-decoration: none;
+  border-radius: 10px;
   font-size: 16px;
   color: var(--black);
-  border-radius: 10px;
+  text-decoration: none;
   transition: background-color 0.2s ease;
+  gap: 12px;
 
-    &:hover {
-      background-color:  #fbfbfb;
-    }
+  &:hover {
+    background-color: #fbfbfb;
+  }
 }
 
-
 .menu-links a.active {
-  background-color: #F1F1F1;
   font-weight: 500;
+  background-color: #f1f1f1;
 }
 
 .square-menu .log-out {
@@ -65,9 +65,9 @@
   padding: 12px 30px;
   margin-top: auto;
   font-size: 16px;
-  gap: 12px;
-  cursor: pointer;
   color: var(--black);
+  cursor: pointer;
+  gap: 12px;
 }
 
 .menu-links a img,
@@ -80,23 +80,20 @@ a {
   color: #000000 !important;
 }
 
-
-
-
-
-.faculty-link{
+.faculty-link {
+  padding: 2px !important;
+  margin-bottom: 0 !important;
   margin-left: 36px;
   font-size: 13px !important;
   text-align: left !important;
-  margin-bottom: 0 !important;
-  padding: 2px !important;
+
   .dot-icon {
-  width: 8px !important; 
-  height: 8px !important;
-  margin-right: 6px !important; 
-}
+    width: 8px !important;
+    height: 8px !important;
+    margin-right: 6px !important;
+  }
 
   &:hover {
-      text-decoration: underline !important;
-    }
+    text-decoration: underline !important;
+  }
 }
